# pip_install_PPIFold

./: AF_FLAGS  FLAGS  README.md  setup.cfg  setup.py
PPIFold/: File_proteins.py  PPIFold.py  Utils.py  utils.py
