[metadata]
name = PPIFold
version = 0.0.1
author = Rouger Quentin
author_email = quentin.rouger@univ-rennes.fr
description = Pipeline allows massive screening using alphafold
url = https://github.com/Qrouger/PPIFold
long_description = file: README.md
long_description_content_type = text/markdown

[options]

packages=
  PPIFold

package_dir =
  PPIFold = .


python_requires = >=3.10
install_requires = 
  alphapulldown >= 1.0.0
